WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143614
_WKWebsiteDataStore doesn't track and remove offline application cache entries
https://bugs.webkit.org/show_bug.cgi?id=143614
Summary
_WKWebsiteDataStore doesn't track and remove offline application cache entries
Anders Carlsson
Reported
2015-04-10 12:18:52 PDT
_WKWebsiteDataStore doesn't track and remove offline application cache entries
Attachments
Patch
(10.09 KB, patch)
2015-04-10 12:22 PDT
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-04-10 12:22:16 PDT
Created
attachment 250526
[details]
Patch
Andreas Kling
Comment 2
2015-04-10 12:33:16 PDT
Comment on
attachment 250526
[details]
Patch r=me
Anders Carlsson
Comment 3
2015-04-10 12:41:02 PDT
Committed
r182639
: <
http://trac.webkit.org/changeset/182639
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug