Source/WebKit2/Shared/WebsiteData/WebsiteDataTypes.h
@@ -32,8 +32,9 @@ enum WebsiteDataTypes {
     WebsiteDataTypeCookies = 1 << 0,
     WebsiteDataTypeDiskCache = 1 << 1,
     WebsiteDataTypeMemoryCache = 1 << 2,
-    WebsiteDataTypeLocalStorage = 1 << 3,
-    WebsiteDataTypeWebSQLDatabases = 1 << 4,
+    WebsiteDataTypeOfflineWebApplicationCache = 1 << 3,
+    WebsiteDataTypeLocalStorage = 1 << 4,
+    WebsiteDataTypeWebSQLDatabases = 1 << 5,
 };
 
 };
