Source/WebKit2/UIProcess/API/Cocoa/_WKWebsiteDataRecord.h
@@ -33,9 +33,10 @@ typedef NS_OPTIONS(NSUInteger, WKWebsiteDataTypes) {
     WKWebsiteDataTypeCookies = 1 << 0,
     WKWebsiteDataTypeDiskCache = 1 << 1,
     WKWebsiteDataTypeMemoryCache = 1 << 2,
+    WKWebsiteDataTypeOfflineWebApplicationCache = 1 << 3,
 
-    WKWebsiteDataTypeLocalStorage = 1 << 3,
-    WKWebsiteDataTypeWebSQLDatabases = 1 << 4,
+    WKWebsiteDataTypeLocalStorage = 1 << 4,
+    WKWebsiteDataTypeWebSQLDatabases = 1 << 5,
 
     WKWebsiteDataTypeAll = NSUIntegerMax,
 } WK_ENUM_AVAILABLE(WK_MAC_TBA, WK_IOS_TBA);
